--- a/UberTracker/Views/LogbookPage.xaml
+++ b/UberTracker/Views/LogbookPage.xaml
@@ -14,7 +14,7 @@
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <CommandBar>
+            <CommandBar Grid.Row="0">
                 <CommandBar.Content>
                     <Grid/>
                 </CommandBar.Content>
@@ -23,7 +23,18 @@
                 <AppBarButton Icon="Delete" Label="Delete"/>
                 <AppBarButton Icon="Share" Label="Export"/>
             </CommandBar>
-            <syncfusion:SfDataGrid x:Name="dataGrid" />
+            <syncfusion:SfDataGrid x:Name="dataGrid" Grid.Row="1" />
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4*" />
+                    <ColumnDefinition Width="4*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="4*" />
+                    <ColumnDefinition Width="4*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+            </Grid>
             <!--
                 The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
                 Place your content here.
